TAG: gxdhtload-6-0-24-?
DATE: 07/26/2024
STAFF: lec
CHANGES: 
wts2-1509/fl2-928/GXD/HT GEO drop/reload : remove unused MGI_KeyValue records

TAG: gxdhtload-6-0-23-10
DATE: 05/30/2024
STAFF: sc
CHANGES: 
1) fl2-839 'GXD HT GEO load: reinstate 730 day config setting'
   download expts/samples back 2 years, not since the beginning
2) fl2-843 'GEO HT Load - Max Samples bug'
   expts w/o sample files are incorrectly being reported as > max samples
   and a expt note is being created.
   expt notes being created by the load were backed out - see story for info
 
TAG: gxdhtload-6-0-23-9
DATE: 04/22/2024
STAFF: sc
CHANGES: wts2-1461 
add more expt types to AE HT experiment load set
Some of these expts w/new exptTypes have empty data structures in the
'subsections' that the load needs to accomodate

TAG: gxdhtload-6-0-23-8
DATE: 04/22/2024
STAFF: sc
CHANGES: wts2-1459, fl2-838 - 
        ArrayExpress HT Load failure - missing columns in some sample rows

TAG: gxdhtload-6-0-23-7
DATE: 04/17/2024
STAFF: sc
CHANGES: wts2-1339/fl2-823 - load expt objects for expts
    with > 1000 samples, but don't load samples. Create a
    ‘Exceeds maximum sample number.’ note unless a) expt
     curation state is 'done' or expt already has the note

TAG: gxdhtload-6-0-23-6
DATE: 04/11/2024
STAFF: sc
CHANGES: wts2-1440 - added some of the report qc to DEBUG mode only

TAG: gxdhtload-6-0-23-5
DATE: 04/10/2024
STAFF: sc
CHANGES: wts2-1440 - merge wts1440 branch to trunk

TAG: gxdhtload-6-0-23-4
DATE: 03/25/2024
STAFF: sc
CHANGES: WTS2-1384 bug in assigning raw specimen values

TAG: gxdhtload-6-0-23-3
DATE: 02/26/2024
STAFF: sc
CHANGES: WTS2-1357 - implement ArrayExpress HT load with data from BioStudies

TAG: gxdhtload-6-0-23-2
DATE: 02/07/2024
STAFF: sc
CHANGES: FL2-731 - removed hard coded env python3 statment at the 
    top of makePredicted.py

TAG: gxdhtload-6-0-23-1
DATE: 02/05/2024
STAFF: sc
CHANGES: wts2-1395 - remove '\' character from description.

TAG: gxdhtload-6-0-19-3